--- a/firstpkg/DESCRIPTION
+++ b/firstpkg/DESCRIPTION
@@ -1,11 +1,9 @@
 Package: firstpkg
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Calcula o IMC corporal, analisa em funcao de um limite e segere peso ideal
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Author: Stella Januario
+Maintainer: Stella Januario <stella.mjs@gmail.com>
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
